samples/_failures_safe/1761620106_4b2610_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db2994fd.c: In function ‘main’:
./samples/SAFE/__tmp_db2994fd.c:166:13: error: expected declaration or statement at end of input
  166 |             case 2: {
      |             ^~~~
./samples/SAFE/__tmp_db2994fd.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_db2994fd.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_db2994fd.c:166:13: error: expected declaration or statement at end of input
